--- a/index.html
+++ b/index.html
@@ -27,23 +27,76 @@
             $.get(vcfUrl, function(data) {
                 var contacts = data.split("BEGIN:VCARD");
                 contacts.shift(); // Remove empty element at the beginning
-
+                /// parse each lines to get key and values
                 contacts.forEach(function(contact) {
                     var lines = contact.split("\n");
                     var name = "";
                     var email = "";
+                    var fullname = "";
+                    var phone = "";
+                    var address = "";
+                    var website = "";
+                    var company = "";
+                    var jobtitle = "";
+                    var note = "";
+                    var photo = "";
+                    // for each line in lines , split the line by ;
 
                     lines.forEach(function(line) {
-                        if (line.startsWith("FN:")) {
-                            name = line.substring(3);
-                        } else if (line.startsWith("EMAIL;")) {
-                            email = line.substring(6);
+                        var lineParts = line.split(";")
+                        var key = lineParts[0];
+                        if (key === "N") {
+                            encodage = lineParts[1];
+                            fullname = lineParts[3] + " " + lineParts[2];
+                        } else if (key === "FN") {
+                            encodage = lineParts[1];
+                            name = lineParts[2];
+                        } else if (key === "ORG") {
+                            company = lineParts[1];
+                        } else if (key === "EMAIL") {
+                            email = lineParts[-1].split(":")[1];
+                        } else if (key === "TEL") {
+                            if((lineParts[0] + ";" + lineParts[1]) === "TEL;CELL") {
+                                tel_cell = lineParts[2];
+                            } else if ((lineParts[0] + ";" + lineParts[1])  === "TEL;WORK") {
+                                tel_work = lineParts[2];
+                            } else if ((lineParts[0] + ";" + lineParts[1])  === "TEL;HOME") {
+                                tel_home = lineParts[2];
+                            } else  {
+                                tel_other = lineParts[2];
+                            }
+                        } else if (key === "ADR") {
+                            if((lineParts[0] + ";" + lineParts[1] + ";" + lineParts[2]) === "ADR;WORK;PREF;") {
+                                for (var i = 3; i < lineParts.length; i++) {
+                                    address += lineParts[i] + " ";
+                                }
+                            }
+                        } else if (key === "URL") {
+                            website = lineParts[1];
+                        } else if (key === "TITLE") {
+                            jobtitle = lineParts[1];
+                        } else if (key === "NOTE") {
+                            note = lineParts[1];
+                        } else if (key === "PHOTO") {
+                            photo = lineParts[1];
                         }
-                    });
+                        
 
                     var contactHtml = '<div class="contact">' +
                                         '<h3>' + name + '</h3>' +
                                         '<p>' + email + '</p>' +
+                                        '<p>' + fullname + '</p>' +
+                                        '<p>' + tel_cell + '</p>' +
+                                        '<p>' + tel_work + '</p>' +
+                                        '<p>' + tel_home + '</p>' +
+                                        '<p>' + tel_other + '</p>' +
+                                        '<p>' + address + '</p>' +
+                                        '<p>' + website + '</p>' +
+                                        '<p>' + company + '</p>' +
+                                        '<p>' + jobtitle + '</p>' +
+                                        '<p>' + note + '</p>' +
+                                        '<p>' + photo + '</p>' +
+                                        
                                       '</div>';
 
                     $('#vcfContent').append(contactHtml);
