--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     // for each line in lines , split the line by ;
 
                     lines.forEach(function (line) {
-                        var lineParts = line.split(";")
+                        var lineParts = line.split(";");
                         var key = lineParts[0];
                         if (key === "N") {
                             encodage = lineParts[1];
