--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                     var name = "";
                     var email = "";
                     var fullname = "";
-                    var phone = "";
+                    var tel_cell = "";
+                    var tel_work = "";
+                    var tel_home = "";
                     var address = "";
                     var website = "";
                     var company = "";
