--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     var tel_cell = "";
                     var tel_work = "";
                     var tel_home = "";
+                    var tel_other = "";
                     var address = "";
                     var website = "";
                     var company = "";
